--- a/index.html
+++ b/index.html
@@ -88,11 +88,13 @@
           <div
             class="lg:flex bg-[rgba(231,111,81,0.1)] lg:p-[100px] pl-[20px] w-full rounded-[5px] lg:justify-around"
           >
-            <div class="w-[475px] space-y-3">
-              <h1 class="text-[60px] font-bold">Ride-on R15 V4 with Smile</h1>
+            <div class="lg:w-[475px] lg:space-y-3 space-y-2">
+              <h1 class="lg:text-[60px] text-[45px] font-bold">
+                Ride-on R15 V4 with Smile
+              </h1>
               <p class="font-light">
-                Amet minim mollit non deserunt ullamco <br />
-                est sit aliqua dolor do amet sint. Velit officia consequat
+                Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                amet sint. Velit officia consequat
                 <br />
                 duis enim velit mollit.
               </p>
@@ -114,11 +116,13 @@
           <div
             class="lg:flex bg-[rgba(231,111,81,0.1)] lg:p-[100px] pl-[20px] w-full rounded-[5px] lg:justify-around"
           >
-            <div class="w-[475px] space-y-3">
-              <h1 class="text-[60px] font-bold">Ride-on R15 V4 with Smile</h1>
+            <div class="lg:w-[475px] lg:space-y-3 space-y-2">
+              <h1 class="lg:text-[60px] text-[45px] font-bold">
+                Ride-on R15 V4 with Smile
+              </h1>
               <p class="font-light">
-                Amet minim mollit non deserunt ullamco <br />
-                est sit aliqua dolor do amet sint. Velit officia consequat
+                Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                amet sint. Velit officia consequat
                 <br />
                 duis enim velit mollit.
               </p>
@@ -140,11 +144,13 @@
           <div
             class="lg:flex bg-[rgba(231,111,81,0.1)] lg:p-[100px] pl-[20px] w-full rounded-[5px] lg:justify-around"
           >
-            <div class="w-[475px] space-y-3">
-              <h1 class="text-[60px] font-bold">Ride-on R15 V4 with Smile</h1>
+            <div class="lg:w-[475px] lg:space-y-3 space-y-2">
+              <h1 class="lg:text-[60px] text-[45px] font-bold">
+                Ride-on R15 V4 with Smile
+              </h1>
               <p class="font-light">
-                Amet minim mollit non deserunt ullamco <br />
-                est sit aliqua dolor do amet sint. Velit officia consequat
+                Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                amet sint. Velit officia consequat
                 <br />
                 duis enim velit mollit.
               </p>
@@ -166,11 +172,13 @@
           <div
             class="lg:flex bg-[rgba(231,111,81,0.1)] lg:p-[100px] pl-[20px] w-full rounded-[5px] lg:justify-around"
           >
-            <div class="w-[475px] space-y-3">
-              <h1 class="text-[60px] font-bold">Ride-on R15 V4 with Smile</h1>
+            <div class="lg:w-[475px] lg:space-y-3 space-y-2">
+              <h1 class="lg:text-[60px] text-[45px] font-bold">
+                Ride-on R15 V4 with Smile
+              </h1>
               <p class="font-light">
-                Amet minim mollit non deserunt ullamco <br />
-                est sit aliqua dolor do amet sint. Velit officia consequat
+                Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                amet sint. Velit officia consequat
                 <br />
                 duis enim velit mollit.
               </p>
