--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
               </ul>
             </div>
             <a class="btn btn-ghost text-2xl font-extrabold items-center"
-              >Biker Zone</a
+              >Bike Dekho</a
             >
           </div>
           <div class="navbar-center hidden lg:flex">
@@ -200,7 +200,214 @@
     </header>
 
     <!-- Main Section -->
-    <main class="md:container mx-auto"></main>
+    <main class="md:container mx-auto">
+      <section class="mb-[130px]">
+        <div class="text-center mb-[46px]">
+          <h1 class="text-[48px] font-semibold">Fetured Bikes In This Year</h1>
+          <p class="text-[rgba(231,111,81,1)]">Best bike collection</p>
+        </div>
+        <div class="lg:flex grid grid-cols-1 ml-[50px]  gap-[138px] lg:w-[1144px] lg:mx-auto">
+          <div class="w-[288px] grayscale">
+            <img class="w-full" src="images/others/feature-bike.png" alt="" />
+          </div>
+          <div class="w-[288px]">
+            <img class="w-full" src="images/others/feature-bike.png" alt="" />
+          </div>
+          <div class="w-[288px] grayscale">
+            <img class="w-full" src="images/others/feature-bike.png" alt="" />
+          </div>
+
+      </section>
+      <section class="mb-[130px]">
+        <div class="text-center mb-[46px]">
+          <h1 class="text-[48px] font-semibold">Latest News</h1>
+        </div>
+        <div class="lg:flex gap-5 lg:justify-center grid grid-cols-1">
+          <div class="card bg-base-100 w-96 shadow-xl space-y-1">
+  <figure>
+    <img
+      src="images/others/latest1.png"
+      alt="" />
+  </figure>
+  <div class="card-body">
+    <h2 class="card-title">Ducati XDIAVEL S-73</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+    <div class="card-actions justify-start">
+      <button class="btn bg-[#E76F51] text-white">Read More</button>
+    </div>
+  </div>
+          </div>
+          <div class="card bg-base-100 w-96 shadow-xl space-y-1">
+  <figure>
+    <img
+      src="images/others/latest2.png"
+      alt="" />
+  </figure>
+  <div class="card-body">
+    <h2 class="card-title">Motorcycles & Scooters</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+    <div class="card-actions justify-start">
+      <button class="btn bg-[#E76F51] text-white">Read More</button>
+    </div>
+  </div>
+          </div>
+          <div class="card bg-base-100 w-96 shadow-xl space-y-1">
+  <figure>
+    <img
+      src="images/others/latest3.png"
+      alt="" />
+  </figure>
+  <div class="card-body">
+    <h2 class="card-title">2021 Honda CBR500R</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+    <div class="card-actions justify-start">
+      <button class="btn bg-[#E76F51] text-white">Read More</button>
+    </div>
+  </div>
+          </div>
+        </div>
+      </section>
+      <section class="mb-[130px]">
+        <div class="text-center mb-[50px]">
+          <h1 class="text-[48px] font-semibold ">Happy <span class="text-[#E76F51]">Clients says</span></h1>
+        </div>
+        <!-- content start -->
+
+      <div class="lg:flex lg:justify-center lg:gap-[44px] ml-[50px] space-y-5 lg:space-y-0 ">
+        <!-- card 1 -->
+        <div class="w-[323px] border-2 border-[#DEDEDE] rounded-[5px]">
+
+        <div class="w-[253px] mx-auto py-[40px]">
+          <div class="flex justify-center mb-[30px]">
+
+        <div class="avatar">
+        <div class="w-24 rounded-full">
+        <img src="images/others/user-1.png" />
+        </div>
+        </div>
+
+          </div>
+
+          <div class="w-[253px] mx-auto space-y-[15px]">
+            <p class="font-normal text-center">
+              Slate helps you see how many more days you need to work to reach your financial 
+              goal for the month and year.
+            </p>
+
+            <!-- rating style  -->
+             <div class="rating flex justify-center">
+  <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+  <input
+    type="radio"
+    name="rating-2"
+    class="mask mask-star-2 bg-orange-400"
+    checked="checked" />
+  <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+  <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+  <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+             </div>
+
+            <div class="text-center">
+              <h3 class="text-[#23A6F0] font-semibold">Regina Miles</h3>
+              <h4 class="font-semibold">Banker</h4>
+            </div>
+
+          </div>
+        </div>
+
+
+        </div>
+
+        <!-- card 2 -->
+       <div class="w-[323px] border-2 border-[#DEDEDE] rounded-[5px]">
+
+        <div class="w-[253px] mx-auto py-[40px]">
+          <div class="flex justify-center mb-[30px]">
+
+        <div class="avatar">
+        <div class="w-24 rounded-full">
+        <img src="images/others/user-2.png" />
+        </div>
+        </div>
+
+          </div>
+
+          <div class="w-[253px] mx-auto space-y-[15px]">
+            <p class="font-normal text-center">
+              Slate helps you see how many more days you need to work to reach your financial 
+              goal for the month and year.
+            </p>
+
+            <!-- rating style  -->
+             <div class="rating flex justify-center">
+  <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+  <input
+    type="radio"
+    name="rating-2"
+    class="mask mask-star-2 bg-orange-400"
+    checked="checked" />
+  <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+  <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+  <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+             </div>
+
+            <div class="text-center">
+              <h3 class="text-[#23A6F0] font-semibold">Regina Miles</h3>
+              <h4 class="font-semibold">Banker</h4>
+            </div>
+
+          </div>
+        </div>
+
+
+        </div>
+        <!-- card 3  -->
+       <div class="w-[323px] border-2 border-[#DEDEDE] rounded-[5px]">
+
+        <div class="w-[253px] mx-auto py-[40px]">
+          <div class="flex justify-center mb-[30px]">
+
+        <div class="avatar">
+        <div class="w-24 rounded-full">
+        <img src="images/others/user-3.png" />
+        </div>
+        </div>
+
+          </div>
+
+          <div class="w-[253px] mx-auto space-y-[15px]">
+            <p class="font-normal text-center">
+              Slate helps you see how many more days you need to work to reach your financial 
+              goal for the month and year.
+            </p>
+
+            <!-- rating style  -->
+             <div class="rating flex justify-center">
+  <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+  <input
+    type="radio"
+    name="rating-2"
+    class="mask mask-star-2 bg-orange-400"
+    checked="checked" />
+  <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+  <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+  <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+             </div>
+
+            <div class="text-center">
+              <h3 class="text-[#23A6F0] font-semibold">Regina Miles</h3>
+              <h4 class="font-semibold">Banker</h4>
+            </div>
+
+          </div>
+        </div>
+
+
+        </div>
+         </div>
+        
+      </section>
+    </main>
 
     <!-- Footer Section -->
     <footer></footer>
