main section done

--- a/index.html
+++ b/index.html
@@ -407,6 +407,50 @@
          </div>
         
       </section>
+      <section class="mb-[130px]">
+        <div>
+          <h1 class="text-[48px] font-semibold text-center mb-[50px] ">Frequently Asked <span class="text-[#E76F51]">Questions</span> </h1>
+        </div>
+        <div class="lg:flex gap-[92px] items-center justify-center">
+          <div class="w-full lg:w-[446px] space-y-5">
+            <img class="w-full hidden lg:inline" src="images/others/faq.png" alt="">
+            <img class="w-full inline lg:hidden" src="images/others/Frame.png" alt="">
+          </div>
+          <!-- Faq Section -->
+          <div class="w-full lg:w-[552px] space-y-5">
+<div class="collapse collapse-arrow bg-white">
+  <input type="radio" name="my-accordion-2" checked="checked" />
+  <div class="collapse-title text-xl font-medium">What are the most important things I should
+know about riding a bike?</div>
+  <div class="collapse-content">
+    <p>Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This will help you be a more focused and legally compliant bike rider. </p>
+  </div>
+</div>
+<div class="collapse collapse-arrow bg-white">
+  <input type="radio" name="my-accordion-2" />
+  <div class="collapse-title text-xl font-medium">How can I tell if my helmet is old and I need a 
+new one?</div>
+  <div class="collapse-content">
+    <p>hello</p>
+  </div>
+</div>
+<div class="collapse collapse-arrow bg-white">
+  <input type="radio" name="my-accordion-2" />
+  <div class="collapse-title text-xl font-medium">My bike has been in storage is it safe to ride?</div>
+  <div class="collapse-content">
+    <p>hello</p>
+  </div>
+</div>
+<div class="collapse collapse-arrow bg-white">
+  <input type="radio" name="my-accordion-2" />
+  <div class="collapse-title text-xl font-medium">What rules should I follow when riding my bike?</div>
+  <div class="collapse-content">
+    <p>hello</p>
+  </div>
+</div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <!-- Footer Section -->
