--- a/index.html
+++ b/index.html
@@ -550,6 +550,29 @@
     </main>
 
     <!-- Footer Section -->
-    <footer></footer>
+    <footer class="bg-[#0B0D17] lg:flex justify-around items-center py-[55px]">
+      <div class="">
+        <div class="text-white space-x-2 font-light mb-1">
+          <a href="#">Download Now</a>
+          <a href="#">License</a>
+        </div>
+        <div class="text-white space-x-2 font-light mb-[15px]">
+          <a href="#">About</a>
+          <a href="#">Feature</a>
+          <a href="#">Pricing</a>
+          <a href="#">Careers</a>
+          <a href="#">Help</a>
+          <a href="#">Privacy & Policy</a>
+        </div>
+        <div class="text-white space-x-2 font-light">
+          <p>Develop by &copy; shutshob</p>
+        </div>
+      </div>
+      <div class="w-[160px] space-y-2">
+        <h2 class="text-white">Get the App</h2>
+        <img class="w-full" src="images/others/android.png" alt="" />
+        <img class="w-full" src="images/others/ios.png" alt="" />
+      </div>
+    </footer>
   </body>
 </html>
