--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
         <div
           class="lg:flex lg:gap-[92px] lg:items-center lg:justify-center grid justify-center"
         >
-          <div class="w-full lg:w-[446px] w-[250px] space-y-5">
+          <div class="w-full lg:w-[446px] w-[350px] space-y-5">
             <img
               class="w-full hidden lg:inline"
               src="images/others/faq.png"
@@ -550,7 +550,9 @@
     </main>
 
     <!-- Footer Section -->
-    <footer class="bg-[#0B0D17] lg:flex justify-around items-center py-[55px]">
+    <footer
+      class="bg-[#0B0D17] lg:flex lg:justify-around lg:items-center py-[55px] grid justify-center"
+    >
       <div class="">
         <div class="text-white space-x-2 font-light mb-1">
           <a href="#">Download Now</a>
